# magopt

./: README.md  environment.yml  play.py  pyproject.toml
old/: optim_admm.py
src/magopt/: bspline.py  gradient_coils.py  optim_admm.py  utils.py
src/magopt/gradient_coils/: __init__.py  circular_z_coil.py  elliptical_frustum.py  gradient_coil.py  matrix_coil.py
src/magopt/pns/: body_model.py  charge_model.py
src/magopt/sim/: __init__.py  analytic.py  elip.py  wire_fields.py
tests/: test_coil_field.py
