[build-system]
requires = [
   "setuptools",
   "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "magopt"
version = "0.0.1"
authors = [
  { name="Daniel Abraham", email="abrahamd@stanford.edu" },
]
description = "Simulation and optimization tool for magnetic fields in MRI applications"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "matplotlib",
]